--- a/index.html
+++ b/index.html
@@ -185,104 +185,110 @@
         <div class="container">
             <article class="article comment">
                 <h2 class="title">Bewertungen</h2>
-                <div id="sl_1" class="swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                <img src="img/user_3.jpg" alt="">
+                <div class="comment__wrap">
+                    <div id="sl_1" class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    <img src="img/user_3.jpg" alt="">
+                                </div>
+                                <div class="comment__text">
+                                    Ich mache die Übungen jetzt seit 2 Monaten.
+                                    Meine Stirnfalten sind weg, meine Nasolabialfalten sind halb weg. Früher habe ich nicht zufrieden mich im Spiegel angeschaut, aber jetzt bin ich so glücklich. Es ist die Mühe wert.
+                                </div>
+                                <div class="comment__name">AI R (52)</div>
                             </div>
-                            <div class="comment__text">
-                                Ich mache die Übungen jetzt seit 2 Monaten.
-                                Meine Stirnfalten sind weg, meine Nasolabialfalten sind halb weg. Früher habe ich nicht zufrieden mich im Spiegel angeschaut, aber jetzt bin ich so glücklich. Es ist die Mühe wert.
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    <img src="img/user_2.jpg" alt="">
+                                </div>
+                                <div class="comment__text">
+                                    Veruggt! ich ha nur zwei Wuche lang trainiert.
+                                    Mini Nasolabialfalte sind dütlich geschrumpft.
+                                    Mi Teint gseht gut us im allgemeine. Me muess an sich schaffe, aber leider isch d' Fuulheit stärgger als ich sälber. Ich bi sälber furchtbar fuul. Aber wenn ich seh, wie cool mi Gsicht wieder zum Läber verwacht, bin i sofort motiviert. Ich dank dir, Irina!
+                                </div>
+                                <div class="comment__name"></div>
                             </div>
-                            <div class="comment__name">AI R (52)</div>
-                        </div>
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                <img src="img/user_2.jpg" alt="">
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    <img src="img/user_4.jpg" alt="">
+                                </div>
+                                <div class="comment__text">
+                                    Das Gesicht selbst fühlt sich fest und straff an. Die Schwellungen sind sehr gut zurückgegangen. Meine Problemzone ist viel besser!
+                                </div>
+                                <div class="comment__name"></div>
                             </div>
-                            <div class="comment__text">
-                                Veruggt! ich ha nur zwei Wuche lang trainiert.
-                                Mini Nasolabialfalte sind dütlich geschrumpft.
-                                Mi Teint gseht gut us im allgemeine. Me muess an sich schaffe, aber leider isch d' Fuulheit stärgger als ich sälber. Ich bi sälber furchtbar fuul. Aber wenn ich seh, wie cool mi Gsicht wieder zum Läber verwacht, bin i sofort motiviert. Ich dank dir, Irina!
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    <img src="img/user_1.jpg" alt="">
+                                </div>
+                                <div class="comment__text">
+                                    Fitface ist die Zukunft, mit diesen Techniken kann man sicher und autonom seine Schönheit erhalten und verbessern. Irina ist eine sehr talentierte Expertin, hervorragende Pädagogin und motiviert mit ihrer Ausstrahlung für ihre Methode Fitface. Ich würde ihre Unterrichte jeder und jedem nur empfehlen. Ich habe bei ihr acht Stunden absolviert und bin von sichtbaren Ergebnissen verblüfft🤩
+                                </div>
+                                <div class="comment__name">Gulnara (51)</div>
                             </div>
-                            <div class="comment__name"></div>
-                        </div>
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                <img src="img/user_4.jpg" alt="">
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    sw
+                                </div>
+                                <div class="comment__text">
+                                    Es ist unglaublich was man ohne Hilfsmittel,nur mit Gesichtsübungen positives erreichen kann,das Gesicht ist wie geliftet, Termin abmachen lohnt sich
+                                </div>
+                                <div class="comment__name">Susanne Wenger</div>
                             </div>
-                            <div class="comment__text">
-                                Das Gesicht selbst fühlt sich fest und straff an. Die Schwellungen sind sehr gut zurückgegangen. Meine Problemzone ist viel besser!
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    rp
+                                </div>
+                                <div class="comment__text">
+                                    Irina ist ein absoluter Profi. Sie arbeitet bewußt, individuell und konzentriert. Langjährige Erfahrung hilft ihr nicht nur Alterungsprozess bei Kunden zu bremsen, sondern auch richtige medizinische Probleme zu beheben. Ich bin sehr zufrieden und empfehle sie weiter schon seit Jahren.
+                                </div>
+                                <div class="comment__name">Rada Penn</div>
                             </div>
-                            <div class="comment__name"></div>
-                        </div>
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                <img src="img/user_1.jpg" alt="">
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    i
+                                </div>
+                                <div class="comment__text">
+                                    Mit der richtigen Trainingstechnik und regelmäßigen Übungen - minus zehn Jahre ohne Spritzen und chirurgische Eingriffe - sind garantiert! Kompetente Beratung im Zentrum von Basel oder online, Betreuung, Übungsanalyse! Und ein schönes Bonus - Taping, Gesichtsmassagen, Beauty-Fashion. Für Irina ist dies nicht nur ein Gesichts-Fitnessstudio - es ist ein Club mit interessanten und nützlichen Aktivitäten für weibliche Schönheit und Jugend. Ich gehe dort gerne hin.
+                                </div>
+                                <div class="comment__name">Irina (49)</div>
                             </div>
-                            <div class="comment__text">
-                                Fitface ist die Zukunft, mit diesen Techniken kann man sicher und autonom seine Schönheit erhalten und verbessern. Irina ist eine sehr talentierte Expertin, hervorragende Pädagogin und motiviert mit ihrer Ausstrahlung für ihre Methode Fitface. Ich würde ihre Unterrichte jeder und jedem nur empfehlen. Ich habe bei ihr acht Stunden absolviert und bin von sichtbaren Ergebnissen verblüfft🤩
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    ms
+                                </div>
+                                <div class="comment__text">
+                                    Wärmstens zu empfehlen! Irina ist eine super Lehrerin, die sich auf ihrem Gebiet extrem gut auskennt, anschauliche Erklärungen machen kann, sehr freundlich, authentisch und ehrlich ist. Für mich war ein individueller Kurs bei ihr äusserst lehrreich und nachhaltig. Herzlichen Dank!
+                                </div>
+                                <div class="comment__name">Manon Siebenhaar</div>
                             </div>
-                            <div class="comment__name">Gulnara (51)</div>
-                        </div>
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                sw
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    n
+                                </div>
+                                <div class="comment__text">
+                                    Irina ist eine erstaunliche Meisterin ihres Fachs! Ich rate jedem, ihren Kurs zu nehmen, er ist großartig! Sie erklärt sehr gut und verständlich.
+                                </div>
+                                <div class="comment__name">Nat</div>
                             </div>
-                            <div class="comment__text">
-                                Es ist unglaublich was man ohne Hilfsmittel,nur mit Gesichtsübungen positives erreichen kann,das Gesicht ist wie geliftet, Termin abmachen lohnt sich
+                            <div class="swiper-slide comment__item">
+                                <div class="comment__pic">
+                                    gp
+                                </div>
+                                <div class="comment__text">
+                                    Bin voll begeistert von dieser Frau und natürlich von Ergebnissen, die ich dank Irina erreicht habe. Sehr empfehlenswert!
+                                </div>
+                                <div class="comment__name">Ganna Pikula</div>
                             </div>
-                            <div class="comment__name">Susanne Wenger</div>
-                        </div>
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                rp
-                            </div>
-                            <div class="comment__text">
-                                Irina ist ein absoluter Profi. Sie arbeitet bewußt, individuell und konzentriert. Langjährige Erfahrung hilft ihr nicht nur Alterungsprozess bei Kunden zu bremsen, sondern auch richtige medizinische Probleme zu beheben. Ich bin sehr zufrieden und empfehle sie weiter schon seit Jahren.
-                            </div>
-                            <div class="comment__name">Rada Penn</div>
-                        </div>
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                i
-                            </div>
-                            <div class="comment__text">
-                                Mit der richtigen Trainingstechnik und regelmäßigen Übungen - minus zehn Jahre ohne Spritzen und chirurgische Eingriffe - sind garantiert! Kompetente Beratung im Zentrum von Basel oder online, Betreuung, Übungsanalyse! Und ein schönes Bonus - Taping, Gesichtsmassagen, Beauty-Fashion. Für Irina ist dies nicht nur ein Gesichts-Fitnessstudio - es ist ein Club mit interessanten und nützlichen Aktivitäten für weibliche Schönheit und Jugend. Ich gehe dort gerne hin.
-                            </div>
-                            <div class="comment__name">Irina (49)</div>
-                        </div>
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                ms
-                            </div>
-                            <div class="comment__text">
-                                Wärmstens zu empfehlen! Irina ist eine super Lehrerin, die sich auf ihrem Gebiet extrem gut auskennt, anschauliche Erklärungen machen kann, sehr freundlich, authentisch und ehrlich ist. Für mich war ein individueller Kurs bei ihr äusserst lehrreich und nachhaltig. Herzlichen Dank!
-                            </div>
-                            <div class="comment__name">Manon Siebenhaar</div>
-                        </div>
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                n
-                            </div>
-                            <div class="comment__text">
-                                Irina ist eine erstaunliche Meisterin ihres Fachs! Ich rate jedem, ihren Kurs zu nehmen, er ist großartig! Sie erklärt sehr gut und verständlich.
-                            </div>
-                            <div class="comment__name">Nat</div>
-                        </div>
-                        <div class="swiper-slide comment__item">
-                            <div class="comment__pic">
-                                gp
-                            </div>
-                            <div class="comment__text">
-                                Bin voll begeistert von dieser Frau und natürlich von Ergebnissen, die ich dank Irina erreicht habe. Sehr empfehlenswert!
-                            </div>
-                            <div class="comment__name">Ganna Pikula</div>
                         </div>
                     </div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button swiper-button-prev">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" tabindex="-1"><path d="M9 3l9 9-9 9"></path></svg>
+                    </div>
+                    <div class="swiper-button swiper-button-next">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" tabindex="-1"><path d="M9 3l9 9-9 9"></path></svg>
+                    </div>
                 </div>
             </article>
             <article class="article tarif">
