--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
                             <div class="tarif__desc">Sie erhalten täglich Video-Lektionen und führen sie aus</div>
                         </div>
                         <div class="tarif__cost">55 EUR</div>
+                        <button class="btn btn_kauf">Kaufen</button>
                     </div>
                     <div class="tarif__el">
                         <div class="tarif__info">
@@ -307,6 +308,7 @@
                             <div class="tarif__desc">Irina sieht persönlich, wie Sie die Übungen ausführen, korrigiert Sie und die Wahrscheinlichkeit, ein doppelt so sichtbares Ergebnis zu erzielen, ist höher</div>
                         </div>
                         <div class="tarif__cost">250 EUR</div>
+                        <button class="btn btn_kauf">Kaufen</button>
                         <div class="tarif__label">Nur 10 Personen!</div>
                     </div>
                 </div>
@@ -393,32 +395,9 @@
     </main>
     <div class="modal-bg"></div>
     <div class="modal-wrap">
-        <div class="modal" data-attr="modal_review">
-            <div class="modal__body">
-                <div class="modal__close">
-                    <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1 1L13 13M13 13L25 25M13 13L25 1M13 13L1 25" stroke="#272727" stroke-width="2" />
-                    </svg>
-                </div>
-            </div>
-        </div>
         <div class="modal" data-attr="modal_form">
             <div class="modal__body">
                 <div class="modal__desc">Check deine E-Mails. Sie haben einen Link zur ersten Lektion erhalten.</div>
-                
-                <div class="modal__close">
-                    <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1 1L13 13M13 13L25 25M13 13L25 1M13 13L1 25" stroke="#272727" stroke-width="2" />
-                    </svg>
-                </div>
-            </div>
-        </div>
-        <div class="modal" data-attr="modal_confirm">
-            <div class="modal__body">
-                <div class="formwrap">
-                    <div class="modal__desc modal__desc_confirm">Спасибо за ваше сообщение. Мы свяжемся с вами в ближайшее
-                        время!</div>
-                </div>
                 <div class="modal__close">
                     <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1L13 13M13 13L25 25M13 13L25 1M13 13L1 25" stroke="#272727" stroke-width="2" />
